syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "/.;proto";

//页面信息
message PageInfo {
    uint32 pn = 1;
    uint32 psize = 2;
}

//用户信息
message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32  role = 7;
}

//用户信息列表
message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}

//手机号
message MobileRequest {
    string mobile = 1;
}

//id
message IdRequest {
    int32 id = 1;
}

//创建用户
message CreateUserInfo {
    string nickName = 1;
    string password = 2;
    string mobile = 3;
}

//更新用户信息
message UpdateUserInfo {
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
}

//用户密码
message PasswordCheckInfo {
    string password = 1;
    string encryptedPassword = 2;
}

//核实密码响应
message CheckResponse {
    bool success = 1;
}

service User{
    rpc GetUserInfoList(PageInfo) returns (UserListResponse); //用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过mobile查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse); //通过id查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); //创建用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); //更新用户
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); //检查密码
}

